Fix footer bar on mobile

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -2,6 +2,11 @@
   @media (max-width: 767px)
     padding: 0 5%
 
+#footer
+  .row
+    @media (max-width: 767px)
+      padding: 0
+
 .email
   font-size: 16px
   font-weight: 600
